Nav z-index fix
Nav z-index fix

--- a/themes/elate/static/css/style.css
+++ b/themes/elate/static/css/style.css
@@ -3235,6 +3235,7 @@ tspan {
         padding-left: 180px;
         padding-top: 28px;
         opacity: 0.6;
+        z-index: 0;
 }
 
 .downloadPicture img {
